LPD-67469 Simplify the way to retrieve the JWKS url using the _authorizationServerMetadataResolver so it can leverage the cache capability there